# boba-orchestrator

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  orchestrator.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: orchestrator.example.yaml  personas.local.example.yaml
conversational/: trigger.py
coordinator/: commit_agent.py  result_merger.py
docs/: architecture.md  competitive-analysis.md  personas.md  providers.md  threat-model.md
notifier/: telegram_notifier.py
observability/: __init__.py  transcript.py
planner/: project_scanner.py  task_decomposer.py  task_selector.py
providers/: __init__.py  _json_utils.py  anthropic_backend.py  base.py  claude_cli_backend.py  logger.py  persona_registry.py  registry.py  session_manager.py
scripts/: check-allowed-repos.py  gc-claude-sessions.py
security/: guardrails.py  sanitizer.py  tool_grants.py
tests/: test_asyncio_deprecation.py  test_check_allowed_repos.py  test_claude_cli_backend.py  test_claude_error_formatter.py  test_cli.py  test_commit_agent.py  test_conversational.py  test_fresh_session_id.py  test_gc_claude_sessions.py  test_guardrails.py  test_json_utils.py  test_logger.py  test_notifier.py  test_persona_registry.py  test_project_scanner.py  test_prompts.py  test_providers.py  test_queue_mode.py  test_result_merger.py  test_review_orchestrator.py  test_sanitizer.py  test_session_flush.py  test_session_manager_track.py  test_signal_notify.py  test_task_decomposer.py  test_task_selector.py  test_tool_grants.py  test_transcript.py  test_transient_retry.py  test_worker_pool.py
workers/: prompts.py  review_orchestrator.py  worker_pool.py
(+7 files in other folders)
